<resources>
    <string name="app_name">ViMusic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Search">Search</string>

    <string name="toolbar_title_my_song">My Song</string>
    <string name="nav_music_library">Library</string>
    <string name="nav_music_list">My List</string>
    <string name="nav_music_folder">Folder</string>
    <string name="nav_music_favorite">Favorite</string>
    <string name="nav_music_recent_play">Recent Play</string>
    <string name="nav_music_recent_add">Recent_Add</string>
    <string name="nav_music_settings">Settings</string>
    <string name="nav_music_exit">Exit</string>
    <string name="content_empty_default">Nothing here</string>
    <string name="play_shuffle">Play shuffle in all</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="unknown_artist_name">Unknown artist</string>
</resources>
