<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_music_library_black_24dp"
            android:title="@string/nav_music_library"/>
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_music_list_black_24dp"
            android:title="@string/nav_music_list"/>
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/ic_music_folder_black_24dp"
            android:title="@string/nav_music_folder"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_music_favorite_black_24dp"
            android:title="@string/nav_music_favorite"/>
        <item
            android:id="@+id/nav_recent_play"
            android:icon="@drawable/ic_music_recent_play_black_24dp"
            android:title="@string/nav_music_recent_play"/>
        <item
            android:id="@+id/nav_recent_add"
            android:icon="@drawable/ic_music_recent_add_black_24dp"
            android:title="@string/nav_music_recent_add"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_music_settings_black_24dp"
                android:title="@string/nav_music_settings"/>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_music_exit_black_24dp"
                android:title="@string/nav_music_exit"/>
        </menu>
    </item>

</menu>
